--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <button class="play-button">Play Bounce</button>
             </div>
             <div class="game-box" onclick="playGame('CloudMachine')">
-                <img src="images/games/CloudMachineBanner.jpg" alt="Cloud Machine Game" />
+                <img src="images/games/cloudMachineBanner.jpg" alt="Cloud Machine Game" />
                 <button class="play-button">Play CloudMachine</button>
             </div>
             <div class="game-box" onclick="playGame('Cupcake')">
-                <img src="images/games/CupcakeBanner.jpg" alt="Cupcake Game" />
+                <img src="images/games/cupcakeBanner.jpg" alt="Cupcake Game" />
                 <button class="play-button">Play Cupcake</button>
             </div>
             <div class="game-box" onclick="playGame('HungryFish')">
@@ -30,19 +30,19 @@
                 <button class="play-button">Play HungryFish</button>
             </div>
             <div class="game-box" onclick="playGame('HungryGuppy')">
-                <img src="images/games/HungryGuppyBanner.jpg" alt="Hungry Guppy Game" />
+                <img src="images/games/hungryGuppyBanner.jpg" alt="Hungry Guppy Game" />
                 <button class="play-button">Play HungryGuppy</button>
             </div>
             <div class="game-box" onclick="playGame('Match')">
-                <img src="images/games/MatchBanner.jpg" alt="Match Game" />
+                <img src="images/games/matchBanner.jpg" alt="Match Game" />
                 <button class="play-button">Play Match</button>
             </div>
             <div class="game-box" onclick="playGame('Pizza')">
-                <img src="images/games/PizzaBanner.jpg" alt="Pizza Game" />
+                <img src="images/games/pizzaBanner.jpg" alt="Pizza Game" />
                 <button class="play-button">Play Pizza</button>
             </div>
             <div class="game-box" onclick="playGame('Zoom')">
-                <img src="images/games/ZoomBanner.jpg" alt="Zoom Game" />
+                <img src="images/games/zoomBanner.jpg" alt="Zoom Game" />
                 <button class="play-button">Play Zoom</button>
             </div>
             <div class="game-box" onclick="playGame('Fluency')">
@@ -74,7 +74,7 @@
                 <button class="play-button">Play Wizard Pinball</button>
             </div>
             <div class="game-box" onclick="playFlashGame('AstroBoard')">
-                <img src="images/games/AstroBoard.png" alt="Astro Board" />
+                <img src="images/games/Astroboard.png" alt="Astro Board" />
                 <button class="play-button">Play Astro Board</button>
             </div>
             <div class="game-box" onclick="playFlashGame('LogRolling')">
