hopefully fully fix reward games

--- a/rewardGames/game-minedigger/index.html
+++ b/rewardGames/game-minedigger/index.html
@@ -7,8 +7,8 @@
     <link href="../shared/css/main.css" rel="stylesheet">
     <link href="../shared/css/luckiest-guy.css" rel="stylesheet">
     <script src="../shared/lib/utils.js"></script>
-    <script src="/libs/audiocogs/aurora.js/v0.4.4/aurora.js"></script>
-    <script src="/libs/audiocogs/mp3.js/v0.1.0/mp3.js"></script>
+    <script src="libs/audiocogs/aurora.js/v0.4.4/aurora.js"></script>
+    <script src="libs/audiocogs/mp3.js/v0.1.0/mp3.js"></script>
 </head>
 
 <body>
