--- a/rewardGames/game-catstacker/index.html
+++ b/rewardGames/game-catstacker/index.html
@@ -107,9 +107,9 @@
             font-style: normal;
         }
     </style>
-    <script src="/libs/phaser/phaser-ce-2.16.0.min.js"></script>
-    <script src="/libs/audiocogs/aurora.js/v0.4.4/aurora.js"></script>
-    <script src="/libs/audiocogs/mp3.js/v0.1.0/mp3.js"></script>
+    <script src="libs/phaser/phaser-ce-2.16.0.min.js"></script>
+    <script src="libs/audiocogs/aurora.js/v0.4.4/aurora.js"></script>
+    <script src="libs/audiocogs/mp3.js/v0.1.0/mp3.js"></script>
     <script type="text/javascript">
         // without setting the domain here we will have CORS error when accessing the parents variables
         var arrDomain = location.hostname.split('.');
