--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <script src="UnityLoader.js"></script>
         <script defer src="loader.js"></script>
         <script src="fakeConnection.js"></script>
+        <script src="fluencyLoader.js"></script>
         <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     </footer>
 </body>
